--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
-  <title>Athlete assist</title>
+  <title>Athlete Assist</title>
   <!--meta tags-->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
@@ -10,7 +10,41 @@
   <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
-  <h1>Welcome to Athlete assist</h1>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">Athlete Assist</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <nav class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <nav class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Registration</a>
+          <a class="nav-item nav-link" href="#">History</a>
+          <a class="nav-item nav-link disabled" href="#">Log in</a>
+        </nav>
+      </nav>
+    </div>
+  </nav>
+  <main class="container text-center">
+    <section class="row justify-content-center">
+      <h1 class="col">Welcome to Athlete Assist</h1>
+    </section>
+    <section class="row justify-content-center">
+      <p class="col-10">Athlete Assist aims to simplify and optimize the management of volunteers at sports events. This digital platform is designed to streamline the coordination of volunteer activities, ensuring the efficient utilization of human resources to meet the diverse needs of sports events. Join us in enhancing the volunteer experience and making a positive impact on the world of sports!</p>
+    </section>
+  </main>
+  <footer class="footer text-center border-bottom bg-light">
+    <section class="row text-muted">
+      <p class="col">
+        Contact info: <br> 
+        athlete@not.adomain <br> 
+        +46000000 <br> 
+        addressroad 265, Nowhere <br> 
+      </p>
+      <p class="col">some other footer information</p>
+    </section>
+  </footer>
   <!--scripts-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
