add animation to submit button

--- a/client/public/registration.html
+++ b/client/public/registration.html
@@ -31,7 +31,7 @@
     <form>
       <div class="mb-3">
         <label for="fullName" class="form-label">Full Name</label>
-        <input type="text" class="form-control" id="fullName" placeholder=" ">
+        <input type="text" class="form-control" id="fullName" placeholder="Jack Doc">
       </div>
       <div class="mb-3">
         <label for="emailAddress" class="form-label">Email Address</label>
