--- a/client/public/login.html
+++ b/client/public/login.html
@@ -21,18 +21,42 @@
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="registration.html">Registration</a>
           <a class="nav-item nav-link" href="history.html">History</a>
-          <a class="nav-item nav-link" href="login.html">Log in</a>
+          <a class="nav-item nav-link disabled" href="#">Log in</a>
         </nav>
       </nav>
     </div>
   </nav>
   <main class="container text-center">
     <section class="row justify-content-center">
-      <h1 class="col">Welcome to Athlete Assist</h1>
+        <div class="row">
+            <h1 class="col">Login to Athlete Assist</h1>
+        </div>
+        <div class="row">
+            <p class="col">Access your volunteer assignemnts and schedules!</p>
+        </div>
     </section>
-    <section class="row justify-content-center">
-      <p class="col-10">Athlete Assist aims to simplify and optimize the management of volunteers at sports events. This digital platform is designed to streamline the coordination of volunteer activities, ensuring the efficient utilization of human resources to meet the diverse needs of sports events. Join us in enhancing the volunteer experience and making a positive impact on the world of sports!</p>
-    </section>
+        
+    <form>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="Username" required>
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+        </div>
+
+        <input type="submit" value="Login">
+
+        <div class="form-check text-start">
+            <input class="form-check-input" type="checkbox" id="rememberUser">
+            <label class="form-check-label" for="rememberUser">
+                Remember me
+            </label>
+        </div>
+
+    </form>
   </main>
   <footer class="footer text-center border-bottom bg-light">
     <section class="row text-muted">
