--- a/client/public/registration.html
+++ b/client/public/registration.html
@@ -19,7 +19,7 @@
           <nav class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <nav class="navbar-nav">
               <a class="nav-item nav-link " href="index.html">Home <span class="sr-only"></span></a>
-              <a class="nav-item nav-link active" href="registration.html">Registration<span class="sr-only"></span>(current)</a></a>
+              <a class="nav-item nav-link active" href="registration.html">Registration<span class="sr-only"></span>(current)</a>
               <a class="nav-item nav-link" href="history.html">History</a>
               <a class="nav-item nav-link disabled" href="#">Log in</a>
             </nav>
@@ -88,7 +88,8 @@
           <p class="col">some other footer information</p>
         </section>
       </footer>
-      <!--scripts-->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <!--scripts, jquery and bootstrap (for some reason collapsible menu doesn't work with bootstrap 5?)-->
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
