added main content section to history page

--- a/client/public/history.html
+++ b/client/public/history.html
@@ -11,21 +11,25 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">Athlete Assist</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container">
+        <a class="navbar-brand" href="#">Athlete Assist</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <nav class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <nav class="navbar-nav">
-              <a class="nav-item nav-link" href="index.html">Home</a>
-              <a class="nav-item nav-link" href="registration.html">Registration</a>
-              <a class="nav-item nav-link active" href="history.html">History<span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link disabled" href="#">Log in</a>
-            </nav>
+        </button>
+        <nav class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <nav class="navbar-nav">
+            <a class="nav-item nav-link" href="index.html">Home</a>
+            <a class="nav-item nav-link" href="registration.html">Registration</a>
+            <a class="nav-item nav-link active" href="history.html">History<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link disabled" href="#">Log in</a>
           </nav>
-        </div>
-      </nav>
+        </nav>
+      </div>
+    </nav>
+
+    <main>
+    </main>
+
     <footer class="footer text-center border-bottom bg-light">
         <section class="row text-muted">
           <p class="col">
