--- a/client/public/history.html
+++ b/client/public/history.html
@@ -18,7 +18,7 @@
           </button>
           <nav class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <nav class="navbar-nav">
-              <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link" href="registration.html">Registration</a>
               <a class="nav-item nav-link" href="history.html">History</a>
               <a class="nav-item nav-link disabled" href="#">Log in</a>
