--- a/client/public/history.html
+++ b/client/public/history.html
@@ -27,7 +27,57 @@
       </div>
     </nav>
 
-    <main>
+    <main class="container text-center">
+      <section class="row justify-content-center">
+        <h1 class="col">History and analysis</h1>
+      </section>
+      <section class="row justify-content-center">
+        <nav class="col-4">
+          <div class="list-group" id="list-tab" role="tablist">
+            <a class="list-group-item list-group-item-action active" id="list-timeline-list" data-toggle="list" href="#timeline" role="tab" aria-controls="timeline">All events</a>
+            <a class="list-group-item list-group-item-action" id="list-1-list" data-toggle="list" href="#list-1" role="tab" aria-controls="1">yyyy-mm-dd Event 1</a>
+            <a class="list-group-item list-group-item-action" id="list-2-list" data-toggle="list" href="#list-2" role="tab" aria-controls="2">yyyy-mm-dd Event 2</a>
+          </div>
+        </nav>
+        <section class="col-8">
+          <div class="tab-content" id="nav-tabContent">
+            <article class="tab-pane fade show active" id="timeline" role="tabpanel" aria-labelledby="timeline">
+              <h2>All events (replace img with JS canvas)</h2>
+              <img class="img-fluid" src="img/allCharts.jpg">
+            </article>
+            <article class="tab-pane fade" id="list-1" role="tabpanel" aria-labelledby="list-1-list">
+              <div class="row">
+                <h2 class="col">yyyy-mm-dd Event 1</h2>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h3>chart (replace img with JS canvas chart)</h3>
+                  <img class="img-fluid" src="img/statistics-clipart-pie-chart-1.png">
+                </div>
+                <div class="col">
+                  <div class="row">
+                    <p class="col">data from selected event</p>
+                  </div>
+                  <div class="row">
+                    <div class="col">
+                      <img src="img/athlete.jpg" class="col img-fluid">
+                    </div>
+                    <ul class="col">
+                      <li>image-related info 1</li>
+                      <li>image-related info 2</li>
+                      <li>image-related info 3</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article class="tab-pane fade" id="list-2" role="tabpanel" aria-labelledby="list-2-list">
+              event 2 data
+            </article>
+          </div>
+        </section>
+        <p class="col"></p>
+      </section>
     </main>
 
     <footer class="footer text-center border-bottom bg-light">
@@ -46,3 +96,5 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
