fixed footer to absolute bottom

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
       <p class="col-10">Athlete Assist aims to simplify and optimize the management of volunteers at sports events. This digital platform is designed to streamline the coordination of volunteer activities, ensuring the efficient utilization of human resources to meet the diverse needs of sports events. Join us in enhancing the volunteer experience and making a positive impact on the world of sports!</p>
     </section>
   </main>
-  <footer class="footer text-center border-bottom bg-light">
+  <footer class="footer text-center mt-auto bg-light">
     <section class="row text-muted">
       <p class="col">
         Contact info: <br> 
