--- a/client/public/registration.html
+++ b/client/public/registration.html
@@ -77,7 +77,7 @@
     </form>
 
 
-    <footer class="footer text-center border-bottom bg-light">
+    <footer class="footer text-center mt-auto bg-light">
         <section class="row text-muted">
           <p class="col">
             Contact info: <br> 
