--- a/client/public/history.html
+++ b/client/public/history.html
@@ -39,7 +39,7 @@
             <a class="list-group-item list-group-item-action" id="list-2-list" data-toggle="list" href="#list-2" role="tab" aria-controls="2">yyyy-mm-dd Event 2</a>
           </div>
         </nav>
-        <section class="col-8">
+        <section class="col-8 overflow-scroll" tabindex="0">
           <div class="tab-content" id="nav-tabContent">
             <article class="tab-pane fade show active" id="timeline" role="tabpanel" aria-labelledby="timeline">
               <h2>All events (replace img with JS canvas)</h2>
@@ -80,7 +80,7 @@
       </section>
     </main>
 
-    <footer class="footer text-center border-bottom bg-light">
+    <footer class="footer text-center mt-auto bg-light">
         <section class="row text-muted">
           <p class="col">
             Contact info: <br> 
