adding a simple fade CSS-animation

--- a/client/public/history.html
+++ b/client/public/history.html
@@ -39,7 +39,7 @@
             <a class="list-group-item list-group-item-action" id="list-2-list" data-toggle="list" href="#list-2" role="tab" aria-controls="2">yyyy-mm-dd Event 2</a>
           </div>
         </nav>
-        <section class="h-75 col-8 overflow-auto" tabindex="0">
+        <section class="col-8 overflow-auto datapane" tabindex="0">
           <div class="tab-content" id="nav-tabContent">
             <article class="tab-pane fade show active" id="timeline" role="tabpanel" aria-labelledby="timeline">
               <h2>All events (replace img with JS canvas)</h2>
