--- a/client/public/login.html
+++ b/client/public/login.html
@@ -32,7 +32,7 @@
             <h1 class="col">Login to Athlete Assist</h1>
         </div>
         <div class="row">
-            <p class="col">Access your volunteer assignemnts and schedules!</p>
+            <p class="col">Access your volunteer assignments and schedules!</p>
         </div>
     </section>
         
