--- a/client/public/index.html
+++ b/client/public/index.html
@@ -76,6 +76,48 @@
     </section>
   </footer>
   <!--scripts-->
+
+<script>
+    //TODO
+    // fetch list of events from http://localhost:8080/event/getevents
+
+  function fetchEvents() {
+    fetch('http://localhost:8080/event/getevents')
+      .then(response => response.json())
+      .then(events => {
+        console.log('tests', events);
+        updateEventList(events);
+      })
+      .catch(error => console.error('Error:', error));
+  }
+
+  function updateEventList(events) {
+    const listGroup = document.querySelector('.list-group');
+    listGroup.innerHTML = '';
+
+    events.forEach(event => {
+      const listItem = document.createElement('a');
+      listItem.className = 'list-group-item list-group-item-action';
+      listItem.href = '#';
+      listItem.innerHTML = `
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">${event.title}</h5>
+          <small>${event.date}</small>
+        </div>
+        <p class="mb-1">${event.description}</p>
+      `;
+      listGroup.appendChild(listItem);
+    });
+  }
+
+  //fetchEvents();
+
+
+  // TODO:
+  // fill in the list in the html list component
+
+</script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
