fetched event list from the API och showed it in the front end

--- a/client/public/history.html
+++ b/client/public/history.html
@@ -21,7 +21,7 @@
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="registration.html">Registration</a>
             <a class="nav-item nav-link active" href="history.html">History<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link disabled" href="#">Log in</a>
+            <a class="nav-item nav-link" href="login.html">Log in</a>
           </nav>
         </nav>
       </div>
