--- a/client/public/registration.html
+++ b/client/public/registration.html
@@ -21,7 +21,7 @@
               <a class="nav-item nav-link " href="index.html">Home <span class="sr-only"></span></a>
               <a class="nav-item nav-link active" href="registration.html">Registration<span class="sr-only"></span>(current)</a>
               <a class="nav-item nav-link" href="history.html">History</a>
-              <a class="nav-item nav-link disabled" href="#">Log in</a>
+              <a class="nav-item nav-link" href="login.html">Log in</a>
             </nav>
           </nav>
         </div>
