--- a/client/public/login.html
+++ b/client/public/login.html
@@ -21,7 +21,7 @@
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="registration.html">Registration</a>
           <a class="nav-item nav-link" href="history.html">History</a>
-          <a class="nav-item nav-link disabled" href="#">Log in</a>
+          <a class="nav-item nav-link" href="login.html">Log in</a>
         </nav>
       </nav>
     </div>
