--- a/client/public/index.html
+++ b/client/public/index.html
@@ -54,8 +54,6 @@
   <!--scripts-->
 
 <script>
-    //TODO
-    // fetch list of events from http://localhost:8080/event/getevents
 
   function fetchEvents() {
     fetch('http://localhost:8080/event/getevents')
@@ -75,18 +73,29 @@
       const listItem = document.createElement('a');
       listItem.className = 'list-group-item list-group-item-action';
       listItem.href = '#';
+      listItem.style.paddingRight = '30px'
       listItem.innerHTML = `
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1">${event.name}</h5>
-          <small>${event.date}</small>
+         <small>${event.date}</small>
+          <button class="btn-close position-absolute top-0 end-0" aria-label="Delete"></button>
         </div>
         <p class="mb-1">${event.organizer}</p>
       `;
       listGroup.appendChild(listItem);
+
+      listItem.querySelector('.btn-close').addEventListener('click', function(e){
+        e.preventDefault();
+        listGroup.removeChild(listItem);
+      });
     });
   }
 
   fetchEvents();
+  
+
+
+
 
 </script>
 
